# elecstruct

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  TODO.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  eigen_example.cpp  input_file_parser_example.cpp  main.cpp  water_sto3g_example.cpp
include/elecstruct/: atoms.hpp  basis.hpp  cartesian3d.hpp  elecstruct.hpp  geometry.hpp  input_file_parser.hpp  matrices.hpp  orbitals.hpp
include/elecstruct/atoms/: atom_info.hpp  atom_label.hpp  atoms.hpp
include/elecstruct/basis/: basis.hpp  gaussian_contraction_info.hpp  gaussian_info.hpp
include/elecstruct/basis/basis_sets/: sto3g.hpp
include/elecstruct/grids/: compile_time_grid2d.hpp  grid2d.hpp  grid3d.hpp  grid4d.hpp  two_electron_integral_grid.hpp
include/elecstruct/input_file_parser/: input_file_options.hpp  input_file_parser.hpp  parsed_information.hpp
include/elecstruct/integrals/: boys.hpp  boys_fast.hpp  electron_electron_index_iterator.hpp  electron_electron_integrals.hpp  expansion_coefficient.hpp  f_coefficient.hpp  integrals.hpp  kinetic_integrals.hpp  nuclear_electron_index_generator.hpp  nuclear_electron_index_iterator.hpp  nuclear_electron_integrals.hpp  overlap_integrals.hpp  two_electron_integral_grid.hpp
include/elecstruct/mathtools/: factorial.hpp  gaussian.hpp  misc.hpp  n_choose_k.hpp  yoshimine.hpp
include/elecstruct/matrices/: overlap.hpp
include/elecstruct/restricted_hartree_fock/: initial_density_matrix.hpp  restricted_hartree_fock.hpp  step.hpp
other/: programming_notes.md
source/: CMakeLists.txt  atoms.cpp  elecstruct.cpp  geometry.cpp  input_file_parser.cpp  matrices.cpp  orbitals.cpp
source/atoms/: atoms_mapper.cpp
source/basis/basis_sets/: sto3g.cpp
source/input_file_parser/: input_file_parser.cpp  parse_atom_information.cpp  parse_initial_fock_guess.cpp  parse_max_hartree_fock_iterations.cpp  parse_n_electrons.cpp  parse_tol_change_density_matrix.cpp  parse_tol_change_hartree_fock_energy.cpp  parse_verbose.cpp  parsed_information.cpp
source/integrals/: boys.cpp  electron_electron_index_iterator.cpp  electron_electron_integrals.cpp  f_coefficient.cpp  kinetic_integrals.cpp  nuclear_electron_index_iterator.cpp  nuclear_electron_integrals.cpp  overlap_integrals.cpp  two_electron_integral_grid.cpp
source/mathtools/: gaussian.cpp  misc.cpp
source/restricted_hartree_fock/: initial_density_matrix.cpp  restricted_hartree_fock.cpp  step.cpp
test/: CMakeLists.txt
test/source/: boys_test.cpp  cartesian3d_test.cpp  elecstruct_test.cpp  electron_electron_index_iterator_test.cpp  electron_electron_integral_test.cpp  gaussian_test.cpp  geometry_test.cpp  grid2d_test.cpp  grid3d_test.cpp  grid4d_test.cpp  input_file_parser_test.cpp  integrals_test.cpp  kinetic_integrals_test.cpp  mathtools_test.cpp  nuclear_electron_index_iterator_test.cpp  overlap_matrix_test.cpp  rhf_step_test.cpp  two_electron_integral_grid_test.cpp
